crates/compiler/tests/parse_errors/unicode_long.elm
module Main exposing (..)

x = "\u{0000041}"
